# credit_risk

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
credit_risk/: 02_Pre_traitement.py  03_Developement_Modele.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: modele_fn_plus_bas.pkl
notebooks/: 01_exploration.ipynb  02_Pre_traitement.ipynb  03_Developement_Modele.ipynb  03_Developement_Modele.py
