[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_risk"
version = "0.0.1"
description = "Exploration, pre-treatment and development of a credit risk model"
authors = [
  { name = "Cl\u00e9riston Martinelo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["credit_risk"]
force_sort_within_sections = true
